force-app/main/default/objects/CTREmailTemplateMaster__c.object
<CustomObject>
    <fields>
        <fullName>HTMLBody__c</fullName>
        <label>Html Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Committee TOP</fullName>
                </value>
                <value>
                    <fullName>Committee Customer TX</fullName>
                </value>
                <value>
                    <fullName>Committee Supplier TX</fullName>
                </value>
                <value>
                    <fullName>Request More Document TOP</fullName>
                </value>
                <value>
                    <fullName>Request More Document TX</fullName>
                </value>
                <value>
                    <fullName>Summarize Report TOP</fullName>
                </value>
                <value>
                    <fullName>Summarize Report TX</fullName>
                </value>
                <value>
                    <fullName>Lead TX</fullName>
                </value>
                <value>
                    <fullName>Lead TOP</fullName>
                </value>
                <value>
                    <fullName>Committee LABIX</fullName>
                </value>
                <value>
                    <fullName>Customer TOP Due Diligence Result High</fullName>
                </value>
                <value>
                    <fullName>Customer LABIX Due Diligence Result High</fullName>
                </value>
                <value>
                    <fullName>Customer TX Due Diligence Result High</fullName>
                </value>
                <value>
                    <fullName>Supplier TOP Due Diligence Result High</fullName>
                </value>
                <value>
                    <fullName>Supplier LABIX Due Diligence Result High</fullName>
                </value>
                <value>
                    <fullName>Supplier TX Due Diligence Result High</fullName>
                </value>
                <value>
                    <fullName>Customer TOP Due Diligence Result High High</fullName>
                </value>
                <value>
                    <fullName>Customer LABIX Due Diligence Result High High</fullName>
                </value>
                <value>
                    <fullName>Customer TX Due Diligence Result High High</fullName>
                </value>
                <value>
                    <fullName>Supplier TOP Due Diligence Result High High</fullName>
                </value>
                <value>
                    <fullName>Supplier LABIX Due Diligence Result High High</fullName>
                </value>
                <value>
                    <fullName>Supplier TX Due Diligence Result High High</fullName>
                </value>
                <value>
                    <fullName>Approved Summarize Report TOP</fullName>
                </value>
                <value>
                    <fullName>Approved Summarize Report TX</fullName>
                </value>
                <value>
                    <fullName>Rejected Summarize Report TOP</fullName>
                </value>
                <value>
                    <fullName>Rejected Summarize Report TX</fullName>
                </value>
                <value>
                    <fullName>Approved Customer TOP</fullName>
                </value>
                <value>
                    <fullName>Approved Supplier TOP</fullName>
                </value>
                <value>
                    <fullName>Rejected Customer TOP</fullName>
                </value>
                <value>
                    <fullName>Rejected Supplier TOP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTR Email Template Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <columns>HTMLBody__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CTR Email Template Master Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>